test/zinc_source/compile_errors/annotations/02_typed_local_reassign_wrong_type.zn
// expected-error: variable 'x' expects a compatible 'i32' value
fn main() {
    x: i32 = 3
    x = 4.0
}
